Fixed the Great Idea logo on mobile view

--- a/css/index.css
+++ b/css/index.css
@@ -137,15 +137,18 @@ h1, h2, h3, h4, h5 {
 	width: 800px;
 	margin: 0 auto;
 }
+
 .container .header {
 	display: flex;
 	justify-content: space-around;
 }
+
 .header nav a {
 	margin: 0 20px;
 	text-decoration: none;
 	color: black;
 }
+
 h1 {
 	font-family: 'Bangers', cursive;
 	font-size: 80px;
@@ -156,16 +159,19 @@ h1 {
 	text-align: center;
 	margin-bottom: 8%;
 }
+
 .hero {
 		display: flex;
 		justify-content: space-around;
 		margin-top: 10%;
 		margin-bottom: 10%;
 }	
+
 .hero-left{
 	 align-content: center;
 	 margin: 5%;
 }
+
 .hero-right {
 	align-content: center;
 }
@@ -180,6 +186,7 @@ h1 {
 	color: black;
 	text-align: center;
 }
+
 .roundimage {
 	width: 70%;
 	height: 60%;
@@ -190,47 +197,56 @@ h1 {
 	align-self: right;
 	flex: 3;
 }
+
 .middle-img {
 	width: 100%;
 	z-index: 0;
 	height: 100%;
 }
+
 .col-container{
 	display: flex;
 	margin-top: 2%;
 	
 }
+
 .Features, .About {
 	justify-content: space-around;
 	margin: 2%;
 }
+
 .col-3-container {
 	display: flex;
 	justify-content: space-around;
 	margin-top: 2%;
-	margin-bottom: 2%;
-	
+	margin-bottom: 2%;	
 }
+
 p {
 	display: flex;
 	font-family: 'Titillium Web', sans-serif;
 	width: 100%;
 }	
+
  .Services, .Product, .Vision{
 	font-family: 'Bangers', cursive;
 	width: 30%;
 }
+
 .contact {
 	margin: 2%;
 	font-family: 'Bangers', cursive;
 	display: block;
 }
+
 address, phone, email {
 	display: block;
 	font-family: 'Titillium Web', sans-serif;
 }
+
 #mainFooter {
 	margin: 0 auto;
+	align-content: center;
 }
 
 .services-header-img {
@@ -239,12 +255,14 @@ address, phone, email {
 	margin-right: 20%;
 	width: 90%;
 }
+
 .Services2 {
 	margin-top: 2%;
 	margin-left: 3%;
 	margin-right: 20%;
 	width: 90%;
 }
+
 .learnMoreButton {
 	text-decoration: none;
 	border: 1px solid black;
@@ -254,11 +272,13 @@ address, phone, email {
 	text-align: center;
 	margin: 5%;
 }
+
 .middle {
 	display: flex;
 	flex-wrap: wrap;
 	justify-items: space-between;
-}	
+}
+
 .digitalDesign, .UX, .digitalMarketing, .webDev, .iOS, .androidDevelopment {
 	border: 2px solid black;
 	box-sizing: border-box;
@@ -268,12 +288,14 @@ address, phone, email {
 	padding: 5px;
 	margin: 2%;	
 }
+
 .list {
 	list-style-type: square;
 	 line-height: 1.7em;
 	 margin-left: 10%;
 	 margin-top: 2%;		
 }
+
 .someFacts {
 	box-sizing: border-box;
 	display: flex;
@@ -281,6 +303,7 @@ address, phone, email {
 	width: 45%;
 	margin: 2%;	
 }
+
 .services-info-img {
 	box-sizing: border-box;
 	display: flex;
@@ -288,6 +311,7 @@ address, phone, email {
 	width: 45%;	
 	align-items: stretch;
 }
+
 .bottom {
 	display: flex;
 	flex-wrap: wrap;
@@ -305,7 +329,12 @@ address, phone, email {
 		display: flex;
 		flex-direction: column-reverse;
   }
-	
+	.logo {
+		margin: 0 auto;	
+		align-content: center;
+		padding: 10px;
+		
+	}
 	.roundimage {
 	  display: none;
   }
@@ -332,56 +361,65 @@ address, phone, email {
 		flex-direction: column;
 		align-items: center;
 		width: 100%;
-	  }
+	}
   
 	  header nav a{
-		border-bottom: 1px solid black;
+		border-bottom: 1px solid; black;
 		align-items: center;
 		display: flex;
 		flex-direction: column;
 		width: 100%;
 		padding: 20px;		
-	  }
+	}
+
+	.logo {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		order: 1;
+		
+
+	}
 
 	  .roundimage {
 		display: none;
 	}
   
-	  .logo {
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-	  }
 
 	  .services {
 		border-top: 1px solid black;
-	  }
+	}
 
 	  .hero-left .button{
 		width: 50%;
-	  }
+	}
 
-	  .col-container {
+	.col-container {
 		display: flex;
 		flex-direction: column;
 		width: 100%;
 		
 	}
-	  .col-3-container {
+
+	.col-3-container {
 		display: flex;
 		flex-direction: column;
 		width: 100%;
 	
 	}
+
 	.Services, .Product, .Vision{
 		width: 100%;
 		padding: 15px;
 	}
+
 	.services-info-img {
 		width: auto ;
 		max-width: 100% ;
 		height: auto ;
+		margin: 10px;
 	}
+
 	.someFacts {
 		display: flex;
 		flex-direction: column;
